# vpngoi

./: Dockerfile  cert.pem  docker-compose.yml  key.pem  nginx.conf  pyproject.toml  requirements.txt
src/shop_bot/: __main__.py  bot_controller.py
src/shop_bot/bot/: handlers.py  keyboards.py
src/shop_bot/data_manager/: database.py
src/shop_bot/modules/: key_manager.py  xui_api.py
src/shop_bot/webhook_server/: app.py
