[tool.poetry]
name = "vles-shopbot"
version = "2.1.0"
description = "Бот для автоматической продажи VLESS VPN"
authors = ["Your Name <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.21.0"
flask = "3.1.1"
py3xui = "0.4.0"
pyotp = "2.9.0"
python-dotenv = "1.1.1"
qrcode = {extras = ["pil"], version = "8.2"}
yookassa = "3.5.0"
aiosend = "3.0.4"
aiohttp = "3.9.5"
aiohttp-sse-client = "0.2.1"
pytonconnect = "0.3.2"
PyYAML = "6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"